[gd_scene load_steps=3 format=3 uid="uid://cpcuwcnejyl4l"]

[ext_resource type="Script" uid="uid://bhf8ssr660kkm" path="res://scripts/pickup_text/pickup_text.gd" id="1_1tmcr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ls8q1"]

[node name="PickupText" type="Control"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_1tmcr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ls8q1")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="TextListContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PickupDisappearTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="item_sold" from="." to="." method="_on_item_sold"]
[connection signal="resource_pickedup" from="." to="." method="_on_resource_pickedup"]
[connection signal="stack_overflow" from="." to="." method="_on_stack_overflow"]
[connection signal="timeout" from="PickupDisappearTimer" to="." method="_on_pickup_disappear_timer_timeout"]
